tweaking spacing issues

--- a/style.css
+++ b/style.css
@@ -1058,11 +1058,11 @@ input[type="search"]:focus {
 }
 
 .home-services ul {
-	float: left;
+	/*float: left;*/
 }
 
 .home-services img {
-	float: right;
+	/*float: right;*/
 }
 
 .home-slideshow-wrap {
@@ -1110,8 +1110,8 @@ input[type="search"]:focus {
 .testimonials,
 .home-services {
 	background: #fff;
-	padding: 0;
-	margin: 0;
+	/*padding: 0;*/
+	/*margin: 0;*/
 	min-height: 100px;
 }
 
@@ -1122,4 +1122,15 @@ input[type="search"]:focus {
 
 .site-content>.container {
 	/*background: yellow;*/
+}
+
+
+/** FOOTER **/
+
+.site-footer ul {
+	list-style-type: none;
+}
+
+.site-footer li {
+	display: inline-block;	
 }
